# WhisperNote

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  whispernote.json.example
.skills/: _index.md  _meta.yml
.skills/_harness/: CLAUDE_template.md  CLINE_template.md  CODEX_template.md  COPILOT_template.md  CURSOR_template.md  GEMINI_template.md  GENERIC_template.md  WINDSURF_template.md  _rules.md  check.sh
.skills/_skills/skill-author/: SKILL.md
.skills/_skills/skill-template/: SKILL.md
.skills/_skills/whispernote-export-formats/: SKILL.md
.skills/_skills/whispernote-hf-setup/: SKILL.md
.skills/_skills/whispernote-internals/: SKILL.md
.skills/_skills/whispernote-models/: SKILL.md
.skills/_skills/whispernote-testing/: SKILL.md
scripts/: normalize_audio.sh
src/whispernote/: __init__.py  __main__.py  cli.py  config.py  defaults.py  diarize.py  export.py  merge.py  transcribe.py
tests/: test_config.py  test_diarize_segments.py  test_export_markdown.py  test_merge.py
