[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whispernote"
version = "0.1.0"
description = "Diarized transcription with MLX Whisper and pyannote on Apple Silicon"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mlx-whisper",
    "pyannote.audio>=4.0",
    "python-dotenv>=1.0",
    "torch",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
whispernote = "whispernote.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
